ping-pong/manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-postgres-svc
  namespace: exercises
spec:
  clusterIP: None
  selector:
    app: ping-pong-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ping-pong-postgres
  namespace: exercises
spec:
  serviceName: ping-pong-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-postgres
  template:
    metadata:
      labels:
        app: ping-pong-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 5
            periodSeconds: 5

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql

  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
