ping-pong/manifests/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ping-pong
  namespace: exercises
spec:
  template:
    spec:
      containers:
        - name: ping-pong
          image: ping-pong
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
          env:
            - name: DATABASE_URL
              value: postgresql://pingpong@ping-pong-postgres-svc.exercises.svc.cluster.local:5432/pingpong
